Fixed readability issue in dark style

--- a/src/themes/dark/main.css
+++ b/src/themes/dark/main.css
@@ -175,7 +175,7 @@ font
 .tableBackground
 {
 	font-size: 8pt;
-	color: #000000;
+	color: #B9B597;
 	background-color: #1D3043;
 }
 
